Adding Previous, Home and Next links (#36)

--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -51,7 +51,29 @@
 
 {% block content %}
     <div class="islet br-box-subtle component text--right">
-        // Next, prev
+        <ul class="list-unstyled list--piped">
+            {#no spaces in here#}
+            {%- if prevPost is not empty -%}
+                <li class="br-keyline">{#--#}
+                    <a class="istats--tracker" data-istats-link-location="blogs_post_top_previous"
+                       href="{{ path('post', {blogId: blog.getId(), guid: prevPost.getGuid() }) }}">
+                        {{ tr('link_previous') }}{#--#}
+                    </a>{#--#}
+                </li>{#--#}
+            {%- endif -%}
+            <li class="br-keyline">{#--#}
+                <a class="istats--tracker" data-istats-link-location="blogs_top_home"
+                   href="{{ path('blog', {blogId: blog.getId()}) }}">{{ tr('link_home') }}</a>{#--#}
+            </li>{#--#}
+            {%- if nextPost is not empty -%}
+                <li class="br-keyline">{#--#}
+                    <a class="istats--tracker" data-istats-link-location="blogs_post_top_next"
+                       href="{{ path('post', {blogId: blog.getId(), guid: nextPost.getGuid() }) }}">{#--#}
+                        {{ tr('link_next') }}{#--#}
+                    </a>{#--#}
+                </li>{#--#}
+            {%- endif -%}
+        </ul>
     </div>
 
     <div class="component component--lined br-keyline">
