--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,5 +1,7 @@
 {% extends 'blogs_base.html.twig' %}
 
+{% import _self as postShow %}
+
 {% block title %}BBC {{ tr('page_title_blogs') }} - {{ blog.getName() }} - {{ post.getTitle() }}{% endblock %}
 
 {% block inline_head %}
@@ -49,7 +51,7 @@
     {%- endif -%}
 {% endblock %}
 
-{% block content %}
+{%- block content -%}
     <div class="islet br-box-subtle component text--right">
         <ul class="list-unstyled list--piped">
             {#no spaces in here#}
@@ -86,6 +88,36 @@
         // POST //
     </div>
 
-    // MORE POSTS //
+    {%- if prevPost or nextPost -%}
+        <div>
+            <h2>{{ tr('header_more_posts') }}</h2>
+            {%- if prevPost -%}
+                {{ postShow.morePosts(blog.getId(), prevPost, 'link_previous', 'blogs_post_bottom_previous') }}
+            {%- endif -%}
+            {%- if nextPost -%}
+                {{ postShow.morePosts(blog.getId(), nextPost, 'link_next', 'blogs_post_bottom_next') }}
+            {%- endif -%}
+        </div>
+    {%- endif -%}
+{%- endblock -%}
 
-{% endblock %}
+{% macro morePosts(blogId, post, header, istatsLocation) %}
+    <div class="grid-wrapper component">
+        <div class="grid 1/3@bpw2 1/3@bpe">
+            <h3 class="delta no-margin">{{ tr(header) }}</h3>
+        </div>
+        <div class="grid 2/3@bpw2 2/3@bpe">
+            <h4 class="delta no-margin">
+                <a class="istats--tracker" data-istats-link-location="{{ istatsLocation }}" itemprop="url"
+                   href="{{ path('post', {blogId: blogId, guid: post.getGuid() }) }}">
+                    <span itemprop="name">{{ post.getTitle() }}</span>
+                </a>
+            </h4>
+            {%- if post.getPublishedDate() -%}
+                <p class="text--subtle milli" itemprop="datePublished">
+                    <time>{{ post.getPublishedDate() | date('l d F Y, H:i') }}</time>
+                </p>
+            {%- endif -%}
+        </div>
+    </div>
+{% endmacro %}
