--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -82,10 +82,45 @@
         <article itemprop="blogPost">
             <div class="component component--lined br-keyline">
                 <h1 itemprop="name">{{ post.getTitle() }}</h1>
+
+                <p class="text--subtle milli" itemprop="datePublished"><time datetime="{{ post.getPublishedDate()|date(constant('DATE_ATOM')) }}">
+                    {{ post.getPublishedDate()|date('l d F Y, H:i') }}
+                </time></p>
+
+                {% if post.getAuthor() %}
+                    {{ ds('postAuthor', post.getAuthor(), blog.getId()) }}
+                {% endif %}
+
+                {% if post.getTags() %}
+                    {{ ds('postTags', post.getTags(), blog.getId()) }}
+                {% endif %}
+
+                {# TODO only show this if a blog has a comments siteId  #}
+                {% if true %}
+                    {{ ds('postSocial', post, blog.getId())}}
+                {% endif %}
+            </div>
+
+            <div class="description">
+                {# TODO replace this with actual content blocks #}
+                <div class="component">I AM A FAKE CONTENT BLOCK, THE BLOG CONTENT GOES HERE</div>
             </div>
         </article>
 
-        // POST //
+        {% if post.getTags() %}
+            {{ ds('postTags', post.getTags(), blog.getId()) }}
+        {% endif %}
+
+        {% if true %}
+            {{ ds('postSocial', post, blog.getId())}}
+        {% endif %}
+
+        {# TODO only show this if a blog has a comments siteId  #}
+        {% if true %}
+            <div class="component" id="comments">
+                COMMENTS GO HERE
+            </div>
+        {% endif %}
     </div>
 
     {%- if prevPost or nextPost -%}
