--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,6 +52,7 @@
 <div class="{% block page_classes %}text-base b-g-p blogs-page{% endblock %}" role="main">
     {% block body %}{% endblock %}
 </div>
+{{ gelicons_source() }}
 <script>
     require(['blogs-bootstrap']);
 </script>
