--- a/src/Ds/_ds-components.scss
+++ b/src/Ds/_ds-components.scss
@@ -11,6 +11,7 @@
 @import 'sass-mq/mq';
 @import 'Core/Vendor/normalize';
 @import 'Core/Gel/gel';
+@import 'Core/Gel/gelicon';
 // Generics - common variables, mixins and helpers
 @import 'Core/Generic/mixins';
 @import 'Core/Generic/extends';
