--- a/src/Ds/_ds-components.scss
+++ b/src/Ds/_ds-components.scss
@@ -36,6 +36,7 @@
 @import 'Core/Objects/counted-list';
 @import 'Core/Objects/letters';
 @import 'Molecule/Image/image';
+@import 'Molecule/Paginator/paginator';
 // Modules
 //@import 'module/secondary-navigation';
 //@import 'module/sidebar';
