--- a/templates/blogs_base.html.twig
+++ b/templates/blogs_base.html.twig
@@ -10,7 +10,7 @@
         <div class="grid 1/3@bpw2 1/3@bpe">
             <aside>
                 {{ ds('aboutModule', blog) }}
-                {{ ds('updatesModule', blog) }}
+                {{ ds('updatesModule', blog, tag ?? null) }}
                 <div class="sidebox component br-box-subtle">
                     <h2 class="island--squashed br-box-highlight no-margin">Recently Commented Module</h2>
                     <div class="grid-wrapper"></div>
