BLOGS-1286 tag page scaffolding (#42)

--- a/src/Ds/_ds-components.scss
+++ b/src/Ds/_ds-components.scss
@@ -36,9 +36,9 @@
 @import 'Core/Objects/counted-list';
 @import 'Core/Objects/letters';
 @import 'Molecule/Image/image';
+@import 'Molecule/Paginator/paginator';
 // Modules
 //@import 'module/secondary-navigation';
 //@import 'module/sidebar';
-@import 'Core/Module/pagination';
 @import 'Core/Module/bbc-datepicker';
 @import 'Core/Module/loader';
