--- a/src/Ds/Post/SocialBar/social_bar.html.twig
+++ b/src/Ds/Post/SocialBar/social_bar.html.twig
@@ -1,5 +1,5 @@
 <div class="islet--vertical text--shout">
-    <a class="blogscomments-link" href="{{ path('post', {blogId: social.getBlogId(), guid: social.getGuid()}) }}#comments">
+    <a class="blogscomments-link" href="{{ path('post', {blogId: social_bar.getBlogId(), guid: social_bar.getGuid()}) }}#comments">
         {{ gelicon('basics', 'comments', 'gelicon--text-base gelicon--comments') }}
         {{ tr('link_comments') }}
     </a>
