Adding initial content blocks

--- a/src/Ds/ContentBlock/CodeBlock/code_block.html.twig
+++ b/src/Ds/ContentBlock/CodeBlock/code_block.html.twig
@@ -1,1 +1,3 @@
-Code block
+<div class="component code">
+    <pre class="code__pre br-box-subtle"><code class="code__code">{{- code_block.getCode() -}}</code></pre>
+</div>
