--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,8 @@
             requirejs.config({
                 "paths": {
                     'jquery-1.9': "https://static.bbci.co.uk/frameworks/jquery/0.4.1/sharedmodules/jquery-1.9.1",
-                    'blogs-bootstrap': "{{ asset_js('js/blogs-bootstrap.js') }}"
+                    'blogs-bootstrap': "{{ asset_js('js/blogs-bootstrap.js') }}",
+                    'third-party': "{{ asset_js('js/third-party.js') }}"
                 },
                 "priority": ['jquery-1.9'],
                 "map": {
