--- a/src/Ds/ContentBlock/SocialBlock/social_block.html.twig
+++ b/src/Ds/ContentBlock/SocialBlock/social_block.html.twig
@@ -1,1 +1,13 @@
-I am a social block.
+<div class="component">
+    <div class="third-party" id="{{ social_block.getContainerId() }}">
+        <p class="text--center"><a href="{{ social_block.getLink() }}">{{ social_block.getAlt() }}</a></p>
+    </div>
+    <script>
+        require(['jquery-1.9', 'third-party'], function($, ThirdParty) {
+            var embed = new ThirdParty({
+                container : $('#{{ social_block.getContainerId() }}'),
+                url       : '{{ social_block.getLink() }}'
+            });
+        });
+    </script>
+</div>
