--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,7 @@
                 "paths": {
                     'jquery-1.9': "https://static.bbci.co.uk/frameworks/jquery/0.4.1/sharedmodules/jquery-1.9.1",
                     'blogs-bootstrap': "{{ asset_js('js/blogs-bootstrap.js') }}",
+                    'smp': "{{ asset_js('js/smp.js') }}",
                     'third-party': "{{ asset_js('js/third-party.js') }}"
                 },
                 "priority": ['jquery-1.9'],
