--- a/src/Ds/Post/PostSummary/post_summary.html.twig
+++ b/src/Ds/Post/PostSummary/post_summary.html.twig
@@ -10,7 +10,7 @@
     </h{{ post_summary.getOption('h_tag') }}>
     <p class="milli no-margin text--subtle" itemprop="datePublished">
         <time datetime="{{ post_summary.getPost().getPublishedDate()|date(constant('DATE_ATOM')) }}">
-            {{ post_summary.getPublishedDate() }}
+            {{ post_summary.getPost().getPublishedDate()|local_date_intl('eeee dd MMMM yyyy, HH:mm') }}
         </time>
     </p>
     {% if post_summary.shouldShowAuthor() %}
