--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -20,9 +20,7 @@
             <ol class="list-unstyled list-lined">
                 {% for post in postResults.getDomainModels() %}
                     <li class="br-keyline">
-                        <a href="{{ path('post', {blogId: blog.getId(), guid: post.getGuid() }) }}">
-                            {{ post.getTitle() }}
-                        </a>
+                        {{ ds('postSummary', blog, post, {'h_tag': 3}) }}
                     </li>
                 {% endfor %}
             </ol>
