Addressing pr comments

--- a/src/Ds/ContentBlock/CodeBlock/code_block.html.twig
+++ b/src/Ds/ContentBlock/CodeBlock/code_block.html.twig
@@ -1,3 +1,7 @@
 <div class="component code">
-    <pre class="code__pre br-box-subtle"><code class="code__code">{{- code_block.getCode() -}}</code></pre>
+    <pre class="code__pre br-box-subtle">{#--#}
+        <code class="code__code">
+            {{- code_block.getCode() -}}
+        </code>{#--#}
+    </pre>
 </div>
