--- a/src/Ds/ContentBlock/SocialBlock/social_block.html.twig
+++ b/src/Ds/ContentBlock/SocialBlock/social_block.html.twig
@@ -10,7 +10,7 @@
         require(['jquery-1.9', 'third-party'], function($, ThirdParty) {
             var embed = new ThirdParty({
                 container : $('#{{ social_block.getContainerId() }}'),
-                url       : '{{ social_block.getLink() }}'
+                url       : {{ social_block.getLink()| json_encode(constant('JSON_UNESCAPED_SLASHES'))|raw }}
             });
         });
     </script>
