--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,9 +34,9 @@
             requirejs.config({
                 "paths": {
                     'jquery-1.9': "https://static.bbci.co.uk/frameworks/jquery/0.4.1/sharedmodules/jquery-1.9.1",
-                    'blogs-bootstrap': "{{ asset_js('js/blogs-bootstrap.js') }}",
-                    'smp': "{{ asset_js('js/smp.js') }}",
-                    'third-party': "{{ asset_js('js/third-party.js') }}",
+                    'blogs-bootstrap': "{{ asset_js('blogs-bootstrap.js') }}",
+                    'smp': "{{ asset_js('smp.js') }}",
+                    'third-party': "{{ asset_js('third-party.js') }}",
                     'bump-3' : '//emp.bbci.co.uk/emp/bump-3/bump-3'
                 },
                 "priority": ['jquery-1.9'],
