Adding SMP embed endpoints per env

--- a/templates/blogs_base.html.twig
+++ b/templates/blogs_base.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block inline_head %}
-    <script type="text/javascript">var cosmos_env="{{ cosmosEnvironment }}";</script>
+    <script type="text/javascript">var endpoint_host="{{ endpointHost }}";</script>
 {% endblock %}
 
 {% block body %}
