--- a/src/Ds/Core/Module/_bbc-datepicker.scss
+++ b/src/Ds/Core/Module/_bbc-datepicker.scss
@@ -6,12 +6,8 @@
 
 $bbc-datepicker-box-indent: 23px;
 
-.bbc-datepicker__title label::before {
-    content: '\e005';
-    margin-right: 8px;
-    font-family: 'gelicons-core'; //@TODO Use SVG gelicon instead of PAL style icons
+svg.bbc-datepicker__title {
     vertical-align: baseline;
-    font-size: 16px;
     display: inline-block;
     transition: transform 0.25s linear;
 }
@@ -51,8 +47,8 @@ body:not(#not-a-real-id) .bbc-datepicker__checkbox-month:checked ~ .bbc-datepick
     @include undo-visually-hidden(); // don't extend, as IE8 doesn't recognise CSS3 selectors
 }
 
-body:not(#not-a-real-id) .bbc-datepicker__checkbox-year:checked ~ .bbc-datepicker__title-year label::before,
-body:not(#not-a-real-id) .bbc-datepicker__checkbox-month:checked ~ .bbc-datepicker__title-month label::before {
+body:not(#not-a-real-id) .bbc-datepicker__checkbox-year:checked ~ .bbc-datepicker__title-year svg.bbc-datepicker__title,
+body:not(#not-a-real-id) .bbc-datepicker__checkbox-month:checked ~ .bbc-datepicker__title-month svg.bbc-datepicker__title {
     transform: rotate(90deg);
 }
 
