--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,7 @@
                     'blogs-bootstrap': "{{ asset_js('blogs-bootstrap.js') }}",
                     'smp': "{{ asset_js('smp.js') }}",
                     'third-party': "{{ asset_js('third-party.js') }}",
+                    'bbc-datepicker': "{{ asset_js('bbc-datepicker.js') }}",
                     'bump-3' : '//emp.bbci.co.uk/emp/bump-3/bump-3'
                 },
                 "priority": ['jquery-1.9'],
