Acting on PR comments

--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -104,7 +104,7 @@
             </div>
 
             <div class="description">
-                {{ ds('postContent', post.getContent()) }}
+                {{ ds('postFull', post.getContent()) }}
             </div>
         </article>
 
