--- a/templates/author/show.html.twig
+++ b/templates/author/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="islet br-box-subtle component text--right">
-        <a class="istats--tracker" data-istats-link-location="blogs_author_page_see_all_authors"
+        <a data-istats-link-location="blogs_author_page_see_all_authors"
            href="{{ path('author_index', {blogId: blog.getId()}) }}">{{ tr('link_see_all_authors') }}</a>
     </div>
     <div class="component component--lined br-keyline">
