--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -59,19 +59,19 @@
             {#no spaces in here#}
             {%- if prevPost is not empty -%}
                 <li class="br-keyline">{#--#}
-                    <a class="istats--tracker" data-istats-link-location="blogs_post_top_previous"
+                    <a data-istats-link-location="blogs_post_top_previous"
                        href="{{ path('post', {blogId: blog.getId(), guid: prevPost.getGuid() }) }}">
                         {{ tr('link_previous') }}{#--#}
                     </a>{#--#}
                 </li>{#--#}
             {%- endif -%}
             <li class="br-keyline">{#--#}
-                <a class="istats--tracker" data-istats-link-location="blogs_top_home"
+                <a data-istats-link-location="blogs_top_home"
                    href="{{ path('blog', {blogId: blog.getId()}) }}">{{ tr('link_home') }}</a>{#--#}
             </li>{#--#}
             {%- if nextPost is not empty -%}
                 <li class="br-keyline">{#--#}
-                    <a class="istats--tracker" data-istats-link-location="blogs_post_top_next"
+                    <a data-istats-link-location="blogs_post_top_next"
                        href="{{ path('post', {blogId: blog.getId(), guid: nextPost.getGuid() }) }}">{#--#}
                         {{ tr('link_next') }}{#--#}
                     </a>{#--#}
@@ -144,7 +144,7 @@
         </div>
         <div class="grid 2/3@bpw2 2/3@bpe">
             <h4 class="delta no-margin">
-                <a class="istats--tracker" data-istats-link-location="{{ istatsLocation }}" itemprop="url"
+                <a data-istats-link-location="{{ istatsLocation }}" itemprop="url"
                    href="{{ path('post', {blogId: blogId, guid: post.getGuid() }) }}">
                     <span itemprop="name">{{ post.getTitle() }}</span>
                 </a>
