--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="islet br-box-subtle component text--right">
-        <a class="istats--tracker" data-istats-link-location="blogs_tag_page_see_all_tags"
+        <a data-istats-link-location="blogs_tag_page_see_all_tags"
            href="{{ path('tag_list', {blogId: blog.getId()}) }}">{{ tr('link_see_all_tags') }}</a>
     </div>
 
