--- a/src/Ds/SidebarModule/about.html.twig
+++ b/src/Ds/SidebarModule/about.html.twig
@@ -28,11 +28,11 @@
                 {% endif %}
                 <ul class="list-unstyled">
                     <li>
-                        <a class="istats--tracker" data-istats-link-location="blogs_global_aside_home"
+                        <a data-istats-link-location="blogs_global_aside_home"
                            href="{{ path('blog', {blogId: about.getBlogId() }) }}">{{ tr('module_about_link_home') }}</a>
                     </li>
                     <li>
-                        <a class="istats--tracker" data-istats-link-location="blogs_global_aside_explore_all_bbc_blogs"
+                        <a data-istats-link-location="blogs_global_aside_explore_all_bbc_blogs"
                            href="{{ path('home') }}">{{ tr('module_about_link_all_blogs') }}</a>
                     </li>
                 </ul>
