--- a/src/Ds/SidebarModule/about.html.twig
+++ b/src/Ds/SidebarModule/about.html.twig
@@ -7,7 +7,7 @@
                     480: 1/2,
                     770: 1/3,
                     1008: '315px'
-                }) }}
+                }, {'ratio': null}) }}
             </div>
         {% endif %}
 
