Checking if there's an author before displaying it (#63)
comments

readding branding and updating morph-lib

env configs, removing invalid argument

updating morph-lib

adding stuff

--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -50,6 +50,10 @@
         {%- endif -%}
     {%- endif -%}
 
+    {%- for script in comments.getHead() -%}
+        {{ script|raw }}
+    {%- endfor -%}
+
     {{ parent() }}
 {% endblock %}
 
@@ -117,7 +121,7 @@
 
         {% if blog.getComments() and blog.getComments().isEnabled() %}
             <div class="component" id="comments">
-                COMMENTS GO HERE
+                {{ comments.getBody()|raw }}
             </div>
         {% endif %}
     </div>
@@ -133,6 +137,10 @@
             {%- endif -%}
         </div>
     {%- endif -%}
+
+    {%- for script in comments.getBodyLast() -%}
+        {{ script|raw }}
+    {%- endfor -%}
 {%- endblock -%}
 
 {% macro morePosts(blogId, post, header, istatsLocation) %}
