--- a/src/Ds/_ds-components.scss
+++ b/src/Ds/_ds-components.scss
@@ -42,3 +42,4 @@
 //@import 'module/sidebar';
 @import 'Core/Module/bbc-datepicker';
 @import 'Core/Module/loader';
+@import 'Core/Module/comments';
