css fixes and error message

--- a/src/Ds/Core/Module/_comments.scss
+++ b/src/Ds/Core/Module/_comments.scss
@@ -1,20 +1,13 @@
-#comments a {
+.comments-section a {
     &:hover,
     &:active,
     &:focus {
-        color: black;
+        color: #000000;
     }
 }
 
-#comments ul,
-#comments li {
-    list-style: none outside none;
+.comments-section ul,
+.comments-section li {
+    list-style: 'none outside none';
     margin: 0;
-}
-
-/* Override iOS rendering rounding and applying
- * gradient to submit button */
-#comments input[type=submit] {
-    -webkit-appearance: none;
-    -webkit-border-radius: 0;
 }
