--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,6 +47,10 @@
                     }
                 }
             });
+
+            window.bbcBlogs = {
+                "counterName" : "{{ istats_counter_name }}"
+            }
         </script>
 </head>
 <body>
