--- a/src/Ds/Core/Module/_comments.scss
+++ b/src/Ds/Core/Module/_comments.scss
@@ -8,6 +8,6 @@
 
 .comments-section ul,
 .comments-section li {
-    list-style: 'none outside none';
+    list-style: none outside none;
     margin: 0;
 }
